2006-03-31  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: New ipmi_kcs_cmd() for kcs api.  Adjust UDM
	functions appropriately.

	* bmc-watchdog/: Implement with KCS api.
	
2006-03-30  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c (_send_packet): Remove
	'is_retry' parameter which wasn't used.  Adjusted calls to
	_send_packet appropriately.
	
2006-03-29  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c
	(ipmipower_powercmd_process_pending): Poll based on the minimum
	timeout remaining, not the maximum.
	
2006-03-28  Albert Chu <chu11@llnl.gov>

	* ipmiping/ipmiping.8.in, rmcpping/rmcpping.8.in: Add note about
	local ping.
	
2006-03-27  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/src/ipmipower_wrappers.c (Ipmi_dump_lan_packet,
	Ipmi_dump_rmcp_packet, Ipmi_dump_rmcpplus_packet): Output
	debugging on error, do not exit.

	* ipmipower/src/ipmipower_check.c
	(ipmipower_check_outbound_sequence_number): Fix ipmi 2.0 corner
	cases on wrap around.

2006-03-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Added appropriate fixes for ipmi 2.0 to handle
	null passwords.

	* freeipmi.spec.in: Fix directory name bug.

	* ipmipower/src: Add privilege check on open session response
	packet.

2006-03-24  Anand Babu  <ab@zresearch.com>

	* fish/extensions/sensors-common.scm: fixed bug #16093 - 
	ipmi-sensors help outputs with wrong program name.

2006-03-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sensor-utils.c (ipmi_sensor_decode_value),
	libfreeipmi/include/freeipmi/ipmi-sensor-utils.h: Add and use new
	analog data format definition validator.

	* ipmipower/: Alter --intel-2-0-session-activation to
	--intel-2-0-session.  Support additional workarounds with
	HMAC-MD5-128 authentication on Intel machines.

2006-03-23  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-messaging-support-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h:
	Support 20 byte passwords in ipmi 2.0 version of Set User
	Password.
